<resources>
    <string name="app_name">TechPop</string>
    <string name="tab_one">Ars Technica</string>
    <string name="tab_two">Engadget</string>
    <string name="tab_three">Recode</string>
    <string name="tab_four">Techcrunch</string>
    <string name="tab_five">Tech Radar</string>
    <string name="tab_six">The Next Web</string>
    <string name="tab_seven">Tech Radar</string>
    <string name="newsimage">The Verge</string>
    <string name="title">title</string>
    <string name="zxczxc">zxczxc</string>
    <string name="about">About</string>
    <string name="techpop_v_0_5">TechPop v.0.8.5</string>
    <string name="powered_by_newsapi_org">Powered by NewsApi.org</string>
    <string name="by_michael_may1">by Michael May</string>
    <string name="bombadu_apps">Bombadu Apps</string>
    <string name="build_date_2_3_2020">Build Date: 3.23.2020</string>
    <string name="updating_news">Updating News...</string>
    <string name="t">t</string>

</resources>
