<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/news_card_container"
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="8dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorPrimaryDark" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <ImageView
                    android:id="@+id/news_card_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/newsimage" />


            </LinearLayout>

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/byLine_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/by_michael_may"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:paddingTop="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/zxczxc"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>